--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+*:focus {
+  outline: 3px solid transparent;
+  outline-offset: 3px;
+  box-shadow: 0 0 0 3px #2e94f9;
+}
+
+textarea, input {
+  border: 2px solid #0b0c0c
+}
+
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -10,7 +20,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 600;
   font-display: swap;
@@ -21,9 +31,73 @@
 }
 
 .inter {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .tnum {
   font-variant-numeric: tabular-nums;
+}
+
+.enhanced-checkbox-container {
+  position: relative;
+  padding-left: 40px;
+  line-height: 1.25;
+}
+
+.enhanced-checkbox-input {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  margin: 0;
+  opacity: 0;
+}
+
+.enhanced-checkbox-input:focus + .enhanced-checkbox-label::before {
+  outline: 4px solid transparent;
+  outline-offset: 4px;
+  box-shadow: 0 0 0 4px #2e94f9;
+}
+
+.enhanced-checkbox-label::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  border: 2px solid currentColor;
+  background: transparent;
+}
+
+.enhanced-checkbox-label {
+  display: inline-block;
+  margin-bottom: 0;
+  padding: 8px 15px 5px;
+  cursor: pointer;
+  touch-action: manipulation;
+}
+
+.enhanced-checkbox-label::after {
+  content: "";
+  position: absolute;
+  top: 11px;
+  left: 9px;
+  width: 18px;
+  height: 7px;
+  transform: rotate(-45deg);
+  border: solid;
+  border-width: 0 0 5px 5px;
+  border-top-color: transparent;
+  opacity: 0;
+  background: transparent;
+}
+
+.enhanced-checkbox-input:checked + .enhanced-checkbox-label::after {
+  opacity: 1;
 }
